--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -7,10 +7,10 @@ options:
   numbered: 2
 
 parts:
-  - caption: Design Workflow
+  - caption: General design info
     numbered: 2
     chapters:
-    - file: design_workflow/general_design_guide
+    - file: design_workflow/general_design_info
     - file: design_workflow/general_loads/general_loads
       sections:
       - file: design_workflow/general_loads/structural_safety
