--- a/book/_config.yml
+++ b/book/_config.yml
@@ -7,7 +7,7 @@ copyright: Delft University of Technology, CC BY 4.0
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
 execute:
-  execute_notebooks: "force"
+  execute_notebooks: "auto"
 
 # Define the name of the latex output file for PDF builds
 latex:
