--- a/book/_config.yml
+++ b/book/_config.yml
@@ -8,6 +8,7 @@ copyright: Delft University of Technology, CC BY 4.0
 # See https://jupyterbook.org/content/execute.html
 execute:
   execute_notebooks: auto
+  kernel: python3
 
 # Define the name of the latex output file for PDF builds
 latex:
