change sphinx thebe in config and add requirements for interactive plot

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,17 @@
 teachbooks
 jupyterbook-patches
 download_link_replacer
+jupyter-book
+numpy
+scipy
+matplotlib
+pandas
+pylance
+ipympl
+plotly
 # numpy
 
 # docutils version for reference page formatting
 docutils==0.17.1
+
+sphinx-thebe ~= 0.9.9  #temporarily disable
