--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ plotly
 # docutils version for reference page formatting
 docutils==0.17.1
 
-sphinx-thebe ~= 0.9.9  #temporarily disable
+# sphinx-thebe ~= 0.9.9  #temporarily disable
