--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # first list the packages you wish to download from PyPI
 teachbooks
-jupyterbook-patches
 download_link_replacer
 jupyter-book
 numpy
@@ -15,5 +14,10 @@ plotly
 docutils==0.17.1
 
 # now list the packages (and the respective url) you wish to download from the GitLab package registry
+--extra-index-url https://gitlab.tudelft.nl/api/v4/projects/17983/packages/pypi/simple
+jupyterbook_patches ~= 0.1.4  #temporarily disable
 --extra-index-url https://gitlab.tudelft.nl/api/v4/projects/11239/packages/pypi/simple
-sphinx-thebe ~= 0.9.9
+sphinx-thebe ~= 0.9.9  #temporarily disable
+
+# lastly any packages you wish to download directly from a Git repository
+download_link_replacer @ git+https://gitlab.tudelft.nl/mude/sphinx-download-link-replacer
