--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,6 +1,6 @@
 
 title: Structural Design Essentials
-author: Roel Schipper, Sander Pasterkamp, Ate Snijder, Marco Schuurman, Geert Ravenshorst, Guus Meinema, Niels van Vliet
+author: Roel Schipper, Sander Pasterkamp, Ate Snijder, Marco Schuurman, Geert Ravenshorst, Guus Meinema, Niels van Vliet, Minke van den Boogaard
 logo: LogoSDE.2.png
 copyright: Delft University of Technology, CC BY 4.0
 
