--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,8 +1,8 @@
 
 title: Structural Design Essentials
-author: Roel Schipper, Sander Pasterkamp, Ate Snijder, Marco Schuurman, Geert Ravenshorst, Guus Meinema, Niels van Vliet, Minke van den Boogaard
+author: R. Schipper, S. Pasterkamp, A. Snijder, M. Schuurman, G. Ravenshorst, G. Meinema, N. van Vliet, M. van den Boogaart
 logo: LogoSDE.2.png
-copyright: Delft University of Technology, CC BY 4.0
+copyright: 2025, Delft University of Technology, CC BY 4.0
 
 # See https://jupyterbook.org/content/execute.html
 execute:
