oud bestand teruggezet

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -109,6 +109,7 @@ parts:
     - file: calculation_examples/safety/intro_safety
       sections:
       - file: calculation_examples/safety/effect_vs_resistance
+      - file: calculation_examples/safety/effect_vs_resistance_old
       - file: calculation_examples/safety/unity_check
       - file: calculation_examples/safety/CS_23_24_safety
     - file: calculation_examples/LCA/LCA
